--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,14 +48,19 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\BulletAi.cs" />
      <Compile Include="Assets\Scripts\ButtonManager.cs" />
+     <Compile Include="Assets\Scripts\DontDestroyOnLoad.cs" />
      <Compile Include="Assets\Scripts\EnemyAi.cs" />
      <Compile Include="Assets\Scripts\FontGenerator.cs" />
      <Compile Include="Assets\Scripts\FontInfo.cs" />
-     <Compile Include="Assets\Scripts\GameMaster.cs" />
+     <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\ObjectMoving.cs" />
      <Compile Include="Assets\Scripts\PauseMenu.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\PopUpManager.cs" />
+     <Compile Include="Assets\Scripts\ResultPopUp.cs" />
      <Compile Include="Assets\Scripts\ScoreManager.cs" />
+     <Compile Include="Assets\Scripts\SoundManager.cs" />
+     <Compile Include="Assets\Scripts\textLoader.cs" />
      <None Include="Assets\stg_basic_pics\document_and_picturelist\readme.txt" />
      <None Include="Assets\spritefont_and_other\document_and_picturelist\readme.txt" />
  <Reference Include="UnityEngine.Analytics">
