--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,11 +53,12 @@
      <Compile Include="Assets\Scripts\FontGenerator.cs" />
      <Compile Include="Assets\Scripts\FontInfo.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
+     <Compile Include="Assets\Scripts\ManagerSummoner.cs" />
      <Compile Include="Assets\Scripts\ObjectMoving.cs" />
      <Compile Include="Assets\Scripts\PauseMenu.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\PopUpManager.cs" />
-     <Compile Include="Assets\Scripts\ResultPopUp.cs" />
+     <Compile Include="Assets\Scripts\ResultPopUpController.cs" />
      <Compile Include="Assets\Scripts\ScoreManager.cs" />
      <Compile Include="Assets\Scripts\SoundManager.cs" />
      <Compile Include="Assets\Scripts\textLoader.cs" />
