--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -149,6 +149,7 @@
      <Compile Include="Assets\Scripts\Ai\EnemyMoveAi\MovePatternBoss01.cs" />
      <Compile Include="Assets\Scripts\Ai\EnemyMoveAi\MovePatternParent.cs" />
      <Compile Include="Assets\Scripts\Controller\GameMasterController.cs" />
+     <Compile Include="Assets\Scripts\Controller\InputNickNameController.cs" />
      <Compile Include="Assets\Scripts\Controller\LeaderBoardController.cs" />
      <Compile Include="Assets\Scripts\Controller\MainMenuButtonController.cs" />
      <Compile Include="Assets\Scripts\Controller\PausePopUpController.cs" />
